--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* .site-nav. link. current { */
 :root {
   --main-font: "Roboto", sans-serif;
   --secondary-font: "Raleway", sans-serif;
@@ -51,18 +50,17 @@ a {
 .top-address-list .item + .item {
   margin-left: 50px;
 }
-
 .navigation-list .link.current {
   color: var(--accent-color);
 }
-
 .navigation-list .link {
   display: block;
   color: #212121;
 }
 
-.header-mail,
-.header-phone {
+.top-address-link {
+  display: inline-flex;
+  align-items: center;
   font-style: normal;
   color: #757575;
 
@@ -71,13 +69,14 @@ a {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-
+.adress-icon {
+  fill: currentColor;
+  margin-right: 10px;
+}
 .link:hover,
 .link:focus,
-.header-phone:hover,
-.header-phone:focus,
-.header-mail:hover,
-.header-mail:focus {
+.top-address-link:hover,
+.top-address-link:focus {
   color: var(--accent-color);
 }
 
@@ -101,6 +100,15 @@ a {
   padding-bottom: 280px;
 
   background-color: #2f303a;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/mainimg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  max-width: 1600px;
   min-height: 600px;
   text-align: center;
 }
@@ -144,8 +152,31 @@ a {
 .main-info-link {
   width: 270px;
 }
+.main-info-link::before {
+  display: block;
+  content: "";
+  height: 120px;
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+.icon-antenna::before {
+  background-image: url(../images/antenna.svg);
+}
+.icon-clock::before {
+  background-image: url(../images/clock.svg);
+}
 .main-info-link:not(:last-child) {
   margin-right: 30px;
+}
+.icon-diagram::before {
+  background-image: url(../images/diagram.svg);
+}
+.icon-astronaut::before {
+  background-image: url(../images/astronaut.svg);
 }
 .main-info-title {
   margin: 0;
@@ -225,6 +256,24 @@ a {
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: #757575;
+}
+.social-list_link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+.social-list {
+  display: flex;
+  justify-content: space-between;
+}
+.social-list_icons {
+  width: 20px;
+  height: 20px;
+  fill: black;
 }
 /* <=== FOOTER ===> */
 .footer {
