--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -110,3 +110,15 @@ ul {
   font-size: 18px;
   line-height: 2;
 }
+.card-link {
+  display: block;
+  width: 370px;
+  height: 404px;
+  left: 215px;
+
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
