--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ a {
   display: flex;
 
   align-items: center;
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -99,7 +99,8 @@ a {
 .hero {
   padding-top: 200px;
   padding-bottom: 280px;
-
+  margin-left: auto;
+  margin-right: auto;
   background-color: #2f303a;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -146,9 +147,7 @@ a {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.main {
-  justify-content: center;
-}
+
 .main-info-item {
   display: flex;
   flex-wrap: wrap;
@@ -334,6 +333,9 @@ a {
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+.foot {
+  align-items: baseline;
 }
 
 .bottom-address {
