--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -21,7 +21,8 @@ ul {
 /* <=== nav btn ===> */
 .portfolio {
   box-sizing: border-box;
-  padding: 94px 15px;
+  padding-top: 94px;
+  padding-bottom: 94px;
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
