--- a/css/styles.css
+++ b/css/styles.css
@@ -97,10 +97,14 @@ a {
 /* <=== HERO ===> */
 
 .hero {
-  padding-top: 200px;
-  padding-bottom: 280px;
+  text-align: center;
+}
+.overlay {
+  max-width: 1600px;
+  height: 600px;
   margin-left: auto;
   margin-right: auto;
+  outline: 1px solid transparent;
   background-color: #2f303a;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -110,17 +114,15 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  max-width: 1600px;
-  min-height: 600px;
-  text-align: center;
 }
-
 .main-title {
-  margin-top: 0;
+  padding-top: 200px;
+  margin-top: 0px;
   margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
+  text-transform: uppercase;
   color: #ffffff;
 }
 
@@ -135,11 +137,11 @@ a {
   background: #2196f3;
   color: #ffffff;
   min-width: 200px;
-  border: 1px solid transparent;
+  border: 1px solid var(--accent-color);
 }
 .main-btn:hover,
 .main-btn:focus {
-  border: 1px solid transparent;
+  border: 1px solid var(--accent-color);
 }
 
 /* <=== особенности ===> */
