--- a/css/styles.css
+++ b/css/styles.css
@@ -138,10 +138,11 @@ a {
   color: #ffffff;
   min-width: 200px;
   border: 1px solid var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .main-btn:hover,
 .main-btn:focus {
-  border: 1px solid var(--accent-color);
+  background: #188ce8;
 }
 
 /* <=== особенности ===> */
