--- a/css/styles.css
+++ b/css/styles.css
@@ -241,6 +241,7 @@ a {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   text-align: center;
+  background: #ffffff;
 }
 .team-list-item + .team-list-item {
   margin-left: 30px;
